--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "mern context api boiler plate with login registration",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+
   },
   "author": "spandan joshi",
   "license": "MIT",
