--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-
   },
   "author": "spandan joshi",
   "license": "MIT",
@@ -16,5 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
